--- a/Controls/NarrativesListViewControl.xaml
+++ b/Controls/NarrativesListViewControl.xaml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <UserControl    
-    x:Class="CryptoPortfolioTracker.Controls.AccountsListViewControl"    
+    x:Class="CryptoPortfolioTracker.Controls.NarrativesListViewControl"    
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"    
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"   
     xmlns:local="using:CryptoPortfolioTracker.Controls"    
     xmlns:converters="using:CryptoPortfolioTracker.Converters"    
     xmlns:views="using:CryptoPortfolioTracker.Views"    
    xmlns:helpers="using:CryptoPortfolioTracker.Helpers"    
-    xmlns:viewmodels="using:CryptoPortfolioTracker.ViewModels"    
     xmlns:models="using:CryptoPortfolioTracker.Models"    
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"    
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:l="using:WinUI3Localizer"
     xmlns:ui="using:CommunityToolkit.WinUI"
     xmlns:toolkit="using:AK.Toolkit.WinUI3"
-    d:DataContext="{d:DesignInstance Type=viewmodels:AccountsViewModel}"
     mc:Ignorable="d">
 
     <UserControl.Resources>
@@ -25,7 +24,8 @@
 
         <Style x:Key="HorizontalSwipe" TargetType="ListViewItem" BasedOn="{StaticResource DefaultListViewItemStyle}">
             <Setter Property="MinHeight" Value="10"/>
-            <Setter Property="Padding" Value="0"/>
+            <Setter Property="Padding" Value="-8"/>
+            <Setter Property="Margin" Value="0,-3,0,0"/>
             <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
             <Setter Property="VerticalContentAlignment" Value="Stretch"/>
             <Setter Property="BorderThickness" Value="0"/>
@@ -49,90 +49,82 @@
         
         <RichTextBlock  Grid.Row="0" Grid.Column="0" Margin="10,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left" >
             <Paragraph TextAlignment="Left" >
-                <Run l:Uids.Uid="AccountsLV_Name" FontSize="12" FontStyle="Italic" />
+                <Run l:Uids.Uid="NarrativesLV_Name" FontSize="12" FontStyle="Italic" />
             </Paragraph>
             <Paragraph TextAlignment="Left">
-                <Run l:Uids.Uid="AccountsLV_Note" FontSize="12" FontStyle="Italic" />
+                <Run l:Uids.Uid="NarrativesLV_Note" FontSize="12" FontStyle="Italic" />
             </Paragraph>
         </RichTextBlock>
         <RichTextBlock   Grid.Row="0" Grid.Column="1" Margin="0,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Right" >
             <Paragraph TextAlignment="Right" >
-                <Run l:Uids.Uid="AccountsLV_MarketValue" FontSize="12" FontStyle="Italic" />
+                <Run l:Uids.Uid="NarrativesLV_MarketValue" FontSize="12" FontStyle="Italic" />
             </Paragraph>
         </RichTextBlock>
         
 
         <Rectangle Grid.Row="1" Grid.ColumnSpan="3" Fill="#eebc3f" Height="2" Margin="5,0,8,0"/>
 
-        <ListView x:Name="AccountsListView" Grid.Row="2" Grid.ColumnSpan="3" x:FieldModifier="public" ItemsSource="{Binding _accountService.ListAccounts}" BorderBrush="Transparent" BorderThickness="1"                              
+        <ListView x:Name="NarrativesListView" Grid.Row="2" Grid.ColumnSpan="3" x:FieldModifier="public" ItemsSource="{Binding _NarrativeService.ListNarratives}" BorderBrush="Transparent" BorderThickness="1"                              
                         IsItemClickEnabled="True" SelectionMode="Single" toolkit:ScrollBarExtensions.KeepVerticalExpanded="{Binding IsScrollBarsExpanded}"
-                  ui:ListViewExtensions.Command="{Binding AccountItemClickedCommand}" SizeChanged="ListView_SizeChanged"
+                  ui:ListViewExtensions.Command="{Binding NarrativeItemClickedCommand}" SizeChanged="ListView_SizeChanged"
                         ItemContainerStyle="{StaticResource HorizontalSwipe}" ScrollViewer.VerticalScrollBarVisibility="Visible"
                         CanReorderItems="False" AllowDrop="false" Margin="0,0,0,0" >
             
             <ListView.ItemTemplate>
-            <DataTemplate x:DataType="models:Account">
+                <DataTemplate x:DataType="models:Narrative">
                     <UserControl>
                     <Grid AutomationProperties.Name="{x:Bind Id}">
-                            <SwipeControl x:Name="AccountsListViewSwipeContainer" >
+                            <SwipeControl x:Name="NarrativesListViewSwipeContainer" Height="60">
                             <Grid>
                                 <Grid VerticalAlignment="Center" Margin="2">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="auto"/>
                                     </Grid.RowDefinitions>
                                     <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="0.8*"/>
+                                            <ColumnDefinition Width="0.9*"/>
                                             <ColumnDefinition Width="0.2*"/>
                                             <ColumnDefinition Width="120"/>
                                     </Grid.ColumnDefinitions>
-                                        <TextBlock x:Name="proxy" helpers:AncestorSource.AncestorType="ListView" Visibility="Collapsed" />
-                                        <Border Grid.Column="0"  Margin="10,0,0,0" VerticalAlignment="Center" >
-                                            <RelativePanel>
-                                                <TextBlock Name="txtName" Text="{Binding Name}" FontWeight="Bold" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" TextWrapping="Wrap" Margin="0,5,0,0"/>
-                                                <TextBlock Name="txtAbout" Text="{Binding About}" TextWrapping="Wrap" RelativePanel.Below="txtName" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" Margin="0,0,0,5"/>
-
-                                                <Border RelativePanel.RightOf="txtName" RelativePanel.AlignVerticalCenterWith="txtName" Height="{Binding Path=Height, ElementName=NarrativeName}" >
-                                                    <GridView x:Name="IconGrid" x:FieldModifier="public" ItemsSource="{Binding Assets}" Margin="0,0,0,0" IsItemClickEnabled="False" SelectionMode="None" 
+                                        
+                                        <TextBlock x:Name="proxy" Text="proxy" helpers:AncestorSource.AncestorType="ListView" Visibility="Collapsed" />
+                                        <RelativePanel VerticalAlignment="Stretch">
+                                            <Border x:Name="NarrativeName"  Grid.Column="0"  Margin="15,0,0,0" >
+                                                <TextBlock Name="txtName" Text="{Binding Name}" ToolTipService.ToolTip="{Binding About}" 
+                                                            FontWeight="Bold" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" 
+                                                            TextWrapping="Wrap" Margin="0,0,0,0" VerticalAlignment="Top"/>
+                                            </Border>
+                                            <Border RelativePanel.RightOf="NarrativeName" RelativePanel.AlignVerticalCenterWith="NarrativeName" Height="{Binding Path=Height, ElementName=NarrativeName}" >
+                                                <GridView x:Name="IconGrid" x:FieldModifier="public" ItemsSource="{Binding Coins}" Margin="0,0,0,0" IsItemClickEnabled="False" SelectionMode="None" 
                                                            PointerEntered="IconGrid_PointerEntered"  PointerExited="IconGrid_PointerExited" 
                                                         ScrollViewer.HorizontalScrollBarVisibility="Auto"
                                                         ScrollViewer.HorizontalScrollMode="Enabled" >
-                                                        <!--toolkit:ScrollBarExtensions.KeepHorizontalExpanded="{Binding IsScrollBarsExpanded}">-->
+                                                    <GridView.ItemContainerStyle>
+                                                        <Style TargetType="GridViewItem" BasedOn="{StaticResource DefaultGridViewItemStyle}">
+                                                            <Setter Property="Margin" Value="0,0,0,0" />
+                                                            <Setter Property="MinHeight" Value="20" />
+                                                        </Style>
+                                                    </GridView.ItemContainerStyle>
 
-                                                        <GridView.ItemContainerStyle>
-                                                            <Style TargetType="GridViewItem" BasedOn="{StaticResource DefaultGridViewItemStyle}">
-                                                                <Setter Property="Margin" Value="0,0,0,0" />
-                                                                <Setter Property="MinHeight" Value="20" />
-                                                            </Style>
-                                                        </GridView.ItemContainerStyle>
-
-                                                        <GridView.ItemsPanel>
-                                                            <ItemsPanelTemplate>
-                                                                <ItemsWrapGrid x:Name="MaxItemsWrapGrid"  MaximumRowsOrColumns="1" Orientation="Vertical"
-                                                                           ItemWidth="32" ItemHeight="20" Margin="0,0,0,0" GroupPadding="0,5,0,0"
+                                                    <GridView.ItemsPanel>
+                                                        <ItemsPanelTemplate>
+                                                            <ItemsWrapGrid x:Name="MaxItemsWrapGrid"  MaximumRowsOrColumns="1" Orientation="Vertical"
+                                                                           ItemWidth="32" ItemHeight="20" Margin="0,0,0,0" GroupPadding="0,2,0,0"
                                                                            HorizontalAlignment="Center" VerticalAlignment="Center"
                                                                            />
-                                                            </ItemsPanelTemplate>
-                                                        </GridView.ItemsPanel>
-                                                        <GridView.ItemTemplate>
-                                                            <DataTemplate x:Name="ImageOverlayTemplate" x:DataType="models:Asset">
-                                                                <!--<TextBlock Text="{Binding Coin.Symbol }"  />-->
+                                                        </ItemsPanelTemplate>
+                                                    </GridView.ItemsPanel>
+                                                    <GridView.ItemTemplate>
+                                                        <DataTemplate x:Name="ImageOverlayTemplate" x:DataType="models:Coin">
+                                                            <Image Name="Image" Source="{Binding ImageUri, Converter={StaticResource ImageConverter}}"/>
+                                                        </DataTemplate>
+                                                    </GridView.ItemTemplate>
+                                                </GridView>
 
-
-                                                                <Image Name="Image" Source="{Binding Coin.ImageUri, Converter={StaticResource ImageConverter}}"/>
-                                                            </DataTemplate>
-                                                        </GridView.ItemTemplate>
-                                                    </GridView>
-
-                                                </Border>
-
-
-
-
-
-
-                                            </RelativePanel>
-                                        </Border>
-
+                                            </Border>
+                                        </RelativePanel>
+                                    
+                                    
+                                    
                                         <Border Grid.Column="1"  Margin="0" VerticalAlignment="Center" HorizontalAlignment="Right" >
                                             <RelativePanel>
                                                 <TextBlock Name="txtValue" 
@@ -144,13 +136,18 @@
                                         </Border>
                                     </Grid>
                                     <RelativePanel HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
-                                        <CommandBar x:Name="HoverCommandBar" Visibility="{Binding DataContext.DataContext.IsExtendedView, ElementName=proxy, Converter={StaticResource BoolToVisibilityConverter}}" IsSticky="False" Background="Transparent" IsOpen="False" DefaultLabelPosition="Right"  >
+                                        <CommandBar x:Name="HoverCommandBar" Visibility="{Binding DataContext.DataContext.IsExtendedView, ElementName=proxy, Converter={StaticResource BoolToVisibilityConverter}}" 
+                                                    IsSticky="False" Background="Transparent" IsOpen="False" DefaultLabelPosition="Right"  >
                                             <CommandBar.SecondaryCommands>
                                                 <!-- Added dummy button to enforce showing the icons. without this dummy the Binding for the icon doesn't work-->
-                                                <AppBarButton l:Uids.Uid="AccountsLV_Edit" Visibility="Visible" x:Name="HoverButtonEdit"  Command="{Binding DataContext.DataContext.ShowAccountDialogToEditCommand, ElementName=proxy}"  CommandParameter="{x:Bind }">
+                                                <AppBarButton l:Uids.Uid="NarrativesLV_Edit" Visibility="Visible" x:Name="HoverButtonEdit"  
+                                                              Command="{Binding DataContext.DataContext.ShowNarrativeDialogToEditCommand, ElementName=proxy}"  
+                                                              CommandParameter="{x:Bind }">
                                                     <FontIcon  Glyph="&#xE70B;" FontWeight="Normal"  />
                                                 </AppBarButton>
-                                                <AppBarButton l:Uids.Uid="AccountsLV_Delete" Icon="Delete"  x:Name="HoverButtonDel" Command="{Binding DataContext.DataContext.DeleteAccountCommand, ElementName=proxy}" CommandParameter="{x:Bind }"/>
+                                                <AppBarButton l:Uids.Uid="NarrativesLV_Delete" Icon="Delete"  x:Name="HoverButtonDel" 
+                                                              Command="{Binding DataContext.DataContext.DeleteNarrativeCommand, ElementName=proxy}" 
+                                                              CommandParameter="{x:Bind }"/>
                                             </CommandBar.SecondaryCommands>
                                         </CommandBar>
                                     </RelativePanel>
@@ -161,6 +158,20 @@
             </DataTemplate>
         </ListView.ItemTemplate>
     </ListView>
+
+        <muxc:TeachingTip x:Name="MyTeachingTipNarr" l:Uids.Uid="Narrative_TeachGeneral"
+              PreferredPlacement="Center" PlacementMargin="0" Background="DarkGoldenrod">
+            <muxc:TeachingTip.ActionButtonContent>
+                <Button Content="Show me" Click="OnGetItClickedNarr"/>
+            </muxc:TeachingTip.ActionButtonContent>
+            <muxc:TeachingTip.CloseButtonContent>
+                <Button Content="Dismiss" Click="OnDismissClickedNarr"/>
+            </muxc:TeachingTip.CloseButtonContent>
+
+        </muxc:TeachingTip>
+
+
+
     </Grid>
 
 </UserControl>
