--- a/Dialogs/NarrativeDialog.xaml
+++ b/Dialogs/NarrativeDialog.xaml
@@ -1,14 +1,14 @@
 <ContentDialog
-    x:Class="CryptoPortfolioTracker.Dialogs.AccountDialog"
+    x:Class="CryptoPortfolioTracker.Dialogs.NarrativeDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
     xmlns:local="using:CryptoPortfolioTracker" 
     xmlns:l="using:WinUI3Localizer"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    Title="Add a new Account"
+    Title="Add a new Narrative"
     Loading="Dialog_Loading"
     DefaultButton="Primary"
-    PrimaryButtonClick="Button_Click_AcceptAccount">
+    PrimaryButtonClick="Button_Click_AcceptNarrative">
 
     <ContentDialog.Resources>
         <!-- Overriding ContentDialogMaxWidth value -->
@@ -27,14 +27,14 @@
             <StackPanel.Background>
                 <SolidColorBrush Color ="#eebc3f" Opacity="0.1"/>
             </StackPanel.Background>
-            <TextBox l:Uids.Uid="AccountDialog_Name" x:Name="txtAccountName" PlaceholderForeground="Wheat" 
-                     TextChanging="AccountName_TextChanging" LosingFocus="AccountName_LosingFocus" Margin="10,0,10,0"></TextBox>
+            <TextBox l:Uids.Uid="NarrativeDialog_Name" x:Name="txtNarrativeName" PlaceholderForeground="Wheat" 
+                     TextChanging="NarrativeName_TextChanging" LosingFocus="NarrativeName_LosingFocus"  Margin="10,0,10,0"></TextBox>
         </StackPanel>
         <StackPanel Grid.Row="1" Grid.Column="0" HorizontalAlignment="Stretch" Margin="5,0,0,0" >
             <StackPanel.Background>
                 <SolidColorBrush Color ="#eebc3f" Opacity="0.1"/>
             </StackPanel.Background>
-            <TextBox l:Uids.Uid="AccountDialog_Description" PlaceholderForeground="Wheat" x:Name="DescriptionText" Margin="10,0,10,0" AutomationProperties.Name="multi-line TextBox" 
+            <TextBox l:Uids.Uid="NarrativeDialog_Description" PlaceholderForeground="Wheat" x:Name="DescriptionText" Margin="10,0,10,0" AutomationProperties.Name="multi-line TextBox" 
                      TextWrapping="Wrap" AcceptsReturn="True" MinWidth="400" MinHeight="150">
             </TextBox>
         </StackPanel>
