--- a/Views/CoinLibraryView.xaml
+++ b/Views/CoinLibraryView.xaml
@@ -9,6 +9,7 @@
     xmlns:l="using:WinUI3Localizer"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:controls="using:CryptoPortfolioTracker.Controls"
+    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     Loading="View_Loading"
     Unloaded="View_Unloaded"
     mc:Ignorable="d">
@@ -67,8 +68,11 @@
                             Margin="10,10,0,0"/>
                         
                     </StackPanel>
+                    
                 </Grid>
             </Border>
         </Grid>
     </Grid>
+    
+
 </Page>
