--- a/Views/DashBoardView.xaml
+++ b/Views/DashBoardView.xaml
@@ -15,6 +15,7 @@
     d:DataContext="{d:DesignInstance Type=viewmodels:DashboardViewModel}"
     xmlns:controls="using:CryptoPortfolioTracker.Controls" 
     xmlns:lvc="using:LiveChartsCore.SkiaSharpView.WinUI"
+    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     Loading="View_Loading"
     mc:Ignorable="d">
 
@@ -39,26 +40,27 @@
         <Grid x:Name="dashboardGrid" CornerRadius="8,8,0,0" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" 
               Margin="0,0,5,0" VerticalAlignment="Stretch" >
             <Grid.RowDefinitions>
-                <RowDefinition Height="100"/>
-                <RowDefinition Height="{Binding ToggleFsMode, Converter={StaticResource ZoomGridDefConverter}, 
-                    ConverterParameter=0.33*|HeatMap+PiePortfolio}"/>
-                <RowDefinition Height="{Binding ToggleFsMode, Converter={StaticResource ZoomGridDefConverter}, 
-                    ConverterParameter=0.33*|Graph+PieAccounts}"/>
-                <RowDefinition Height="{Binding ToggleFsMode, Converter={StaticResource ZoomGridDefConverter}, 
-                    ConverterParameter=0.33*|Other}"/>
+                <RowDefinition Height="{Binding ToggleFsMode, 
+                    Converter={StaticResource ZoomGridDefConverter}, ConverterParameter=0.13*|Other}"/>
+                <RowDefinition Height="{Binding ToggleFsMode, 
+                    Converter={StaticResource ZoomGridDefConverter}, ConverterParameter=0.33*|HeatMap+PiePortfolio}"/>
+                <RowDefinition Height="{Binding ToggleFsMode, 
+                    Converter={StaticResource ZoomGridDefConverter}, ConverterParameter=0.33*|Graph+PieAccounts}"/>
+                <RowDefinition Height="{Binding ToggleFsMode, 
+                    Converter={StaticResource ZoomGridDefConverter}, ConverterParameter=0.33*|PieNarratives}"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="{Binding ToggleFsMode, Converter={StaticResource ZoomGridDefConverter}, 
-                    ConverterParameter=0.41*|HeatMap+Graph}"/>
-                <ColumnDefinition Width="{Binding ToggleFsMode, Converter={StaticResource ZoomGridDefConverter}, 
-                    ConverterParameter=0.26*|PiePortfolio+PieAccounts}"/>
-                <ColumnDefinition Width="{Binding ToggleFsMode, Converter={StaticResource ZoomGridDefConverter}, 
-                    ConverterParameter=0.33*|Other}"/>
+                <ColumnDefinition Width="{Binding ToggleFsMode, 
+                    Converter={StaticResource ZoomGridDefConverter}, ConverterParameter=0.41*|HeatMap+Graph}"/>
+                <ColumnDefinition Width="{Binding ToggleFsMode, 
+                    Converter={StaticResource ZoomGridDefConverter}, ConverterParameter=0.26*|PiePortfolio+PieAccounts}"/>
+                <ColumnDefinition Width="{Binding ToggleFsMode, 
+                    Converter={StaticResource ZoomGridDefConverter}, ConverterParameter=0.33*|PieNarratives}"/>
             </Grid.ColumnDefinitions>
             
-            <controls:HomePageHeaderImage Grid.Row="0" Grid.Column="0" Grid.RowSpan="5" Grid.ColumnSpan="3" 
+            <controls:HomePageHeaderImage Grid.Row="0" Grid.Column="0" Grid.RowSpan="4" Grid.ColumnSpan="3" 
                                           Opacity="0.1" Margin="0,0,0,0" VerticalAlignment="Stretch"/>
-            <RelativePanel Grid.Row="0"  Grid.Column="0" Grid.ColumnSpan="3">
+            <RelativePanel Grid.Row="0"  Grid.Column="0" Grid.ColumnSpan="3" >
                 <TextBlock x:Name="smallHeaderText" Text="Crypto Portfolio Tracker" Foreground="DarkGoldenrod" 
                            Margin="10,10,0,0" VerticalAlignment="Top" Style="{StaticResource TitleTextBlockStyle}"/>
                 <TextBlock l:Uids.Uid="Dashboard_Title" x:Name="txtDashboard" Margin="10,5,0,0" 
@@ -69,15 +71,37 @@
                     <FontIcon Glyph="{Binding GlyphPrivacy}" FontWeight="Normal" Width="20" />
                 </helpers:CustomBtn>
             </RelativePanel>
-
-
             
             <controls:HeatMapControl  x:Name="heatMap"  Grid.Row="1" Grid.Column="0" Margin="10,0,0,0" HorizontalAlignment="Stretch" />
             <controls:GraphControl  x:Name="GraphControl" Grid.Row="2" Grid.Column="0" Margin="10,0,0,0" HorizontalAlignment="Stretch" />
             <controls:PieChartControl x:Name="Portfolio" x:FieldModifier="public" Grid.Row="1" Grid.Column="1" Margin="10,0,0,0" HorizontalAlignment="Stretch" />
             <controls:PieChartControl x:Name="Accounts" x:FieldModifier="public" Grid.Row="2" Grid.Column="1" Margin="10,0,0,0" HorizontalAlignment="Stretch" />
             <controls:Top5Control x:Name="Top5" x:FieldModifier="public" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="10,10,0,0" HorizontalAlignment="Stretch" />
-            <controls:ValueGainsControl x:Name="ValueGains" x:FieldModifier="public" Grid.Row="1" Grid.Column="2" Grid.RowSpan="3" Margin="10,10,0,0" HorizontalAlignment="Stretch" />
+            <controls:ValueGainsControl x:Name="ValueGains" x:FieldModifier="public" Grid.Row="0" Grid.Column="2" Grid.RowSpan="3" Margin="10,10,0,0" HorizontalAlignment="Stretch" />
+            <controls:PieChartControl x:Name="Narratives" x:FieldModifier="public" Grid.Row="3" Grid.Column="2" Margin="10,0,0,0" HorizontalAlignment="Stretch" />
+
+
+            <muxc:TeachingTip x:Name="MyTeachingTipPort" l:Uids.Uid="Dashboard_TeachPortfolio" Target="{x:Bind Portfolio}"
+                PreferredPlacement="RightBottom" PlacementMargin="0" Background="DarkGoldenrod">
+                <muxc:TeachingTip.ActionButtonContent>
+                    <Button Content="Get it" Click="OnGetItClickedPort"/>
+                </muxc:TeachingTip.ActionButtonContent>
+                <muxc:TeachingTip.CloseButtonContent>
+                    <Button Content="Dismiss" Click="OnDismissClickedPort"/>
+                </muxc:TeachingTip.CloseButtonContent>
+
+            </muxc:TeachingTip>
+
+
+            <muxc:TeachingTip x:Name="MyTeachingTipNarr" l:Uids.Uid="Dashboard_TeachNarrative" Target="{x:Bind Narratives}"
+                PreferredPlacement="RightTop" PlacementMargin="0" Background="DarkGoldenrod">
+                <muxc:TeachingTip.ActionButtonContent>
+                    <Button Content="Get it" Click="OnGetItClickedNarr"/>
+                </muxc:TeachingTip.ActionButtonContent>
+            </muxc:TeachingTip>
+
+
+
 
 
         </Grid>
